# listen-together-api

./: .env.example  .gitignore  Cargo.toml  README.md
src/: database.rs  errors.rs  main.rs  youtube.rs
src/routes/: session.rs
src/session/: functions.rs  mod.rs  models.rs  routes.rs
