[package]
name = "listen-together-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.13.0", features = ["rt-multi-thread", "macros"] }
poem = { version = "1.3.57", features = ["websocket"] }
redis = { version = "0.23.2", features = ["tokio-comp", "connection-manager"] }
dotenvy = "0.15.7"
uuid = { version = "1.4.1", features = ["v4"] }
serde = "1.0.188"
serde_json = "1.0.105"
thiserror = "1.0.47"
reqwest = { version = "0.11.20", features = ["json"] }
log = "0.4.19"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.26"
tracing = { version = "0.1.37", features = ["log"] } # capture logs from poem to fern
futures-util = "0.3.28"
youtube_dl = { version = "0.9.0", features = ["tokio", "downloader-rustls-tls"] }
